--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           git config --local user.email "$GIT_EMAIL"
           git config --local user.name "$GIT_NAME"
-          git commit -m "[Dead-Hosts::Infrastructure][AuthChecker]" -a
+          git commit -m "DH: AuthChecker" -a
 
       - name: Push changes
         uses: ad-m/github-push-action@master
